# cv-pipeliner

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app_main.py  build.env  changelog.md  docker-compose.yml  index.yaml  install_lib.sh  pyproject.toml  requirements.txt  sample.env  setup.py  test-values.yaml
app/: Dockerfile  app.py  config.yaml  dataset_browser.py  model.py  run_app.sh
apps/: app.py  config.py  config.yaml  dataset_browser.py  model.py  trace.py
backend/: .dockerignore  Dockerfile  app.py  config.yaml
backup/: app_streamlit.py
cv_pipeliner/: __init__.py  logging.py  requirements.txt
cv_pipeliner_kedro/: .kedro.yml  README.md  setup.cfg
docs/: YOLOv8Example.ipynb  getting_started.ipynb  yolov8.py.md
frontend/: .browserslistrc  .editorconfig  .eslintignore  .eslintrc  .stylelintignore  .stylelintrc  Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.ts
helm-chart/: Chart.yaml  values.yaml
lib/: bootstrap.ipynb  install_object_detection_api.sh  introduction (tmp).ipynb  requirements.txt  setup.py
test/: backend_test.py
tests/: backend_test.py  conftest.py  test_batch_generators.py  test_classification_inferencer.py  test_core_data.py  test_data_converters.py  test_detection_inferencer.py  test_docs_notebooks.py  test_embedder_inferencer.py  test_inference_architecture.py  test_inferencer_contracts.py  test_inferencer_import_compatibility.py  test_inferencer_real_smoke.py  test_keypoints_regressor_inferencer.py  test_label_studio.py  test_pipeline_inferencer.py  test_shared_helpers.py  test_utils_fiftyone.py  test_utils_images.py  test_utils_images_datas.py  test_visualizers.py
two_stage_pipeliner/: logging.py
(+395 files in other folders)
